Add indexer chroma and elastic

--- a/.env-example.txt
+++ b/.env-example.txt
@@ -1,5 +1,10 @@
 # text-generation service
-# wizard-vicuna-13B-GPTQ
-# Wizard-Vicuna-13B-Uncensored-GPTQ
-# robin-13B-v2-GPTQ
-MODEL_NAME=""
+MODEL_NAME=
+
+# indexer
+HOST_BASE_URL=
+INDEXER_SERVER_PORT=
+DOCS_PORT=
+CHROMA_PORT=
+ELASTIC_PORT=
+SENTENCE_TRANSFORMER_EMBEDDING_MODEL=
