--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: '3.9'
 
 services:
-  # text-generation:
-  #   build:
-  #     context: ./packages/text-generation
-  #     dockerfile: Dockerfile
-  #   deploy:
-  #     resources:
-  #       reservations:
-  #         devices:
-  #           - driver: nvidia
-  #             capabilities: [ gpu ]
-  #   environment:
-  #     - MODEL_NAME=${MODEL_NAME}
-  #   ports:
-  #     - "7862:7862"
-  #   volumes:
-  #     - ./packages/text-generation/models:/workspace/models
+  text-generation:
+    build:
+      context: ./packages/text-generation
+      dockerfile: Dockerfile
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              capabilities: [ gpu ]
+    environment:
+      - MODEL_NAME=${MODEL_NAME}
+    ports:
+      - "7862:7862"
+    volumes:
+      - ./packages/text-generation/models:/workspace/models
 
   es:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0
