--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,10 @@
 version: '3.9'
 
 services:
-  text-generation:
-    build:
-      context: ./packages/text-generation
-      dockerfile: Dockerfile
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              capabilities: [ gpu ]
-    environment:
-      - MODEL_NAME=${MODEL_NAME}
-    ports:
-      - "7862:7862"
-    volumes:
-      - ./packages/text-generation/models:/workspace/models
-
-  # es:
-  #   image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0
-  #   environment:
-  #     - xpack.security.enabled=false
-  #     - "cluster.routing.allocation.disk.watermark.low=90%"
-  #     - discovery.type=single-node
-  #     - ES_JAVA_OPTS=-Xms4096m -Xmx4096m
-  #   ports:
-  #     - ${ELASTIC_PORT}:${ELASTIC_PORT}
-  #   volumes:
-  #     - esdata:/usr/share/elasticsearch/data
-
-
-  # indexer:
+  # text-generation:
   #   build:
-  #     context: ./packages/indexer
+  #     context: ./packages/text-generation
   #     dockerfile: Dockerfile
-  #   depends_on: 
-  #     - es
   #   deploy:
   #     resources:
   #       reservations:
@@ -44,16 +12,48 @@ services:
   #           - driver: nvidia
   #             capabilities: [ gpu ]
   #   environment:
-  #     - HOST_BASE_URL=${HOST_BASE_URL}
-  #     - INDEXER_SERVER_PORT=${INDEXER_SERVER_PORT}
-  #     - DOCS_PORT=${DOCS_PORT}
-  #     - CHROMA_PORT=${CHROMA_PORT}
-  #     - ELASTIC_PORT=${ELASTIC_PORT}
-  #     - SENTENCE_TRANSFORMER_EMBEDDING_MODEL=${SENTENCE_TRANSFORMER_EMBEDDING_MODEL}
+  #     - MODEL_NAME=${MODEL_NAME}
   #   ports:
-  #     - ${INDEXER_SERVER_PORT}:${INDEXER_SERVER_PORT}
+  #     - "7862:7862"
   #   volumes:
-  #     - ./packages/indexer/models:/root/.cache/huggingface
+  #     - ./packages/text-generation/models:/workspace/models
+
+  es:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0
+    environment:
+      - xpack.security.enabled=false
+      - "cluster.routing.allocation.disk.watermark.low=90%"
+      - discovery.type=single-node
+      - ES_JAVA_OPTS=-Xms4096m -Xmx4096m
+    ports:
+      - ${ELASTIC_PORT}:${ELASTIC_PORT}
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+
+
+  indexer:
+    build:
+      context: ./packages/indexer
+      dockerfile: Dockerfile
+    depends_on: 
+      - es
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              capabilities: [ gpu ]
+    environment:
+      - HOST_BASE_URL=${HOST_BASE_URL}
+      - INDEXER_SERVER_PORT=${INDEXER_SERVER_PORT}
+      - DOCS_PORT=${DOCS_PORT}
+      - CHROMA_PORT=${CHROMA_PORT}
+      - ELASTIC_PORT=${ELASTIC_PORT}
+      - SENTENCE_TRANSFORMER_EMBEDDING_MODEL=${SENTENCE_TRANSFORMER_EMBEDDING_MODEL}
+    ports:
+      - ${INDEXER_SERVER_PORT}:${INDEXER_SERVER_PORT}
+    volumes:
+      - ./packages/indexer/models:/root/.cache/huggingface
 
 volumes:
   esdata:
